--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -602,4 +602,14 @@ the community can benefit from them as well.},
 	month = feb,
 	year = {2015},
 	howpublished = {{https://developer.mozilla.org/en-US/docs/WebSockets}}
+},
+
+@online{flaki2015,
+	title = {The {JavaScript} World Domination},
+	url = {https://medium.com/@slsoftworks/javascript-world-domination-af9ca2ee5070},
+	abstract = {From browsers to mobile phones, from tablets to tabletops, from industrial automation to the tiniest microcontrollers?{\textemdash}?{JavaScript} seems to creep into the most unexpected places these days. It{\textquoteright}s not too long until your very toaster will be running {JavaScript{\textellipsis}} but why?},
+	author = {Flaki},
+	month = mar,
+	year = {2015},
+	howpublished = {https://medium.com/@slsoftworks/javascript-world-domination-af9ca2ee5070}
 }
