--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -19,10 +19,10 @@ This report is a case study of using W3C Web Components,
 \index{Web Components}
 a proposed HTML5 extension,
 to implement techniques of encapsulation\index{encapsulation}, abstraction\index{abstraction}, modularity in web application engineering.
-The author designed Speakur, a real-time discussion social plugin for the web, 
+The author designed Speakur\index{Speakur}, a real-time discussion social plugin for the web, 
 as an experiment to determine the viability and maturity of using Web Components to create modern, highly composable web applications. Figure~\ref{f:demo1} shows an example of a Speakur discussion.
 
-Like most web applications Speakur is written in a combination of HTML markup and the Java\-script programming language. 
+Like most web applications Speakur is written in a combination of HTML markup and the Java\-Script programming language. 
 HTML is a declarative markup language used to create documents --- web pages --- which are viewed with the help of a program called the browser. 
 The Hyper\-text Markup Language (HTML) 
 \index{HTML}
@@ -41,9 +41,9 @@ More than any other invention, other than perhaps email, the World Wide Web (WWW
 \end{figure}
 
 Those designing and programming applications for the Web as a computing platform have long dreamed of the ability to mix and match independent, reusable chunks of functionality --- components --- in their documents without mutual coupling and interference. 
-The original and current Document Object Model (DOM)
+The Document Object Model (DOM)
 \index{DOM}
-browser abstraction provided by HTML does not allow for significant decoupling; 
+browser abstraction does not allow for significant decoupling; 
 everything lives together on one big page. Hacks like the 
 \tcode{<iframe>} 
 \index{<iframe>}
@@ -53,20 +53,19 @@ At the time of HTML's introduction the concept of quickly and easily composing a
 much less a full-fledged dynamic application, 
 out of Lego-like reusable building blocks seemed like a distant dream at best. 
 The introduction of the 
-Javascript\footnote{Javascript, also rendered as JavaScript or JS, 
-has no significant relation to Sun's (now Oracle's) popular Java\index{Java} programming language;
-the name is an unfortunate coincidence at best.
-
-To complicate the naming situation even further, Javascript is officially standardized under the name ECMAScript (ES)\index{ECMAScript}.}
-\index{Javascript}
-(JS)\index{Javascript} programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
-Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google Docs}, powered by Javascript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
+JavaScript\index{JavaScript}\footnote{JavaScript, also rendered as Javascript or JS, 
+has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized under the name ECMAScript (ES)\index{ECMAScript}.}
+(JS)\index{JavaScript} programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
+Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
 Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts didn't step on each other's toes, else disaster frequently ensued. 
 Each component or area of the system could not help but be coupled to the others at some level as a result of the programming model imposed by the DOM\index{DOM} and HTML~\cite{ihrig2012}.
 
-Over the years the dynamic behaviors afforded by Javascript grew in importance along with the web, and helped contribute to its success. 
-The flexible, loosely typed nature of Javascript aided the prototyping and initial development process,
+Over the years the dynamic behaviors afforded by JavaScript grew in importance along with the web, and helped contribute to its success. 
+JavaScript\index{JavaScript} is now a ubiquitous programming language and has expanded far beyond the desktop web browser. 
+JavaScript interpreters can be found in mobile phones, industrial controllers, and now the embedded devices that comprise the Internet of Things (IoT)\index{Internet of Things (IoT)}~\cite{flaki2015}.
+Its flexible, loosely typed nature can be a boon to the prototyping and initial development process,
 but the difficulties of building a large application in the DOM soon became apparent.
+
 Over time, a bewildering array of frameworks and libraries sprang up around the HTML/JS ecosystem to help manage this complexity and to provide scaffolding and structure for the client side of web apps.
 For many years individual JS frameworks seemed to come and go as ephemerally as teenage pop idols~\cite{allenpike2015}. 
 Interoperability between these completing frameworks was virtually non-existent; 
@@ -82,17 +81,17 @@ focusing primarily on the ``view'' part of the common
 model-view-controller\index{model-view-controller}(MVC) 
 design pattern~\cite{reactcontributors2015}.
 
-Yet despite the emergence of the updated HTML5 standard in 2011 and the recent successes of web frameworks like Angular and React in capturing developer attention, 
-a clear picture still did not exist of how web apps could achieve the encapsulated component model that had become prevalent in other areas of software engineering.
+Yet despite the emergence of the updated HTML5\index{HTML!HTML5} standard in 2011 and the recent successes of web frameworks like Angular\index{Angular} and React\index{React} in capturing developer attention, 
+a clear picture still did not exist of how web apps could achieve the encapsulated component model that had become prevalent in other areas of software engineering\index{software engineering}.
 That is, until engineers from Google\footnote{
-As of March 2015, Google's Chrome browser is the most popular desktop browser~\cite{zachte2015}.}
+As of March 2015, Google's Chrome\index{Google!Google Chrome} browser is the most popular desktop browser~\cite{zachte2015}.}
 \index{Google}
 and Mozilla\footnote{
 The Mozilla Foundation is the sponsor of the popular Firefox web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
 \index{Mozilla} 
-and other organizations got together in 2012 under a W3C Web Applications Working Group~\cite{w3c2015} 
-to draft a new standard called \textbf{Web Components} that will extend and enhance HTML5 in ways that could have a significant long-term impact~\cite{yveslafon2015}. 
-For example, as of the time of this writing, a rewrite of Angular called Angular 2.0 is slated to include Web Components as a core architectural element~\cite{santiagoesteva2015}.
+and other organizations got together in 2012 under a W3C Web Applications Working Group\index{Web Applications Working Group}~\cite{w3c2015} 
+to draft a new standard called \textbf{Web Components} that will extend and enhance HTML5\index{HTML!HTML5} in ways that could have a significant long-term impact~\cite{yveslafon2015}. 
+For example, as of the time of this writing, a rewrite of Angular\index{Angular} called Angular 2.0 is slated to include Web Components as a core architectural element~\cite{santiagoesteva2015}.
 
 \section{Web Components Overview}
 Fundamentally, the Web Components standard consists of four new core DOM technologies --- extensions to the current HTML5\index{HTML!HTML5} standard.
@@ -112,7 +111,7 @@ The core Web Component technologies are~\cite{penades2015}:
 \textbf{Imports}\index{HTML!Imports}: packaging for HTML components
 \end{itemize}
 
-This report also explores several related web standards initiatives that are frequently associated with Web Components 
+This report also explores several related web standards initiatives that are frequently associated with Web Components\index{Web Components} 
 but are not formally grouped under them, including mutation observers,
 \index{mutation observers}
 model driven views, 
@@ -123,21 +122,23 @@ and CSS Grid
 \index{Grid}
 systems. 
 In part because many of these technologies are not yet formally accepted as W3C standards and are not yet widely implemented in typical mobile and desktop browsers, 
-Speakur has been implemented using Google's experimental Polymer framework~\cite{polymercontributors2015}.\index{Polymer}
-Polymer provides a Javascript `polyfill'
+Speakur\index{Speakur} has been implemented using Google's experimental Polymer\index{Polymer} framework~\cite{polymercontributors2015}.
+Polymer provides a JavaScript `polyfill'
 \index{polyfill}
 library to implement many of the new Web Component features in browsers which would otherwise not support them. 
 Eventually this platform polyfill should become unnecessary, in theory, as WC becomes widely adopted in browsers.
 Some browsers like Google Chrome 
-\index{Google Chrome}
-already have at least some native Web Component support and on these browsers the polyfill is effectively a `no-op'.
+\index{Google!Google Chrome}
+have already implemented at least some native 
+Web Component\index{Web Components} support 
+and the polyfill\index{polyfill} is effectively a `no-op' in these areas.
 
 The potential componentization of the web is one of the most exciting developments in web engineering in years and follows the overall growth in software-as-a-service (SaaS) 
 \index{Software as a Service (SaaS)}
 and the service oriented architecture
 \index{Service Oriented Architecture}
 model. 
-The conversion of dynamic web logic---not mere snippets of plain HTML---into bundles of reusable, extendable, composable components enables web developers to move to a higher level of abstraction\index{abstraction} than was previously possible.
+The conversion of dynamic web logic---not mere snippets of plain HTML\index{HTML}---into bundles of reusable, extendable, composable components enables web developers to move to a higher level of abstraction\index{abstraction} than was previously possible.
 
 The move towards a component-based Web will enable interesting new composite services, mashups, and may help broaden the potential pool of web developers. 
 What previously required a highly integrated, high-overhead development model or lots of tedious glue code can become as simple as importing a custom element and dropping it onto a page.
@@ -146,22 +147,29 @@ What previously required a highly integrated, high-overhead development model or
 \section{Structure of This Report}
 \index{Structure of This Report@\emph{Structure of This Report}}%
 
-The goal of this report is to demonstrate the application of software engineering design patterns embodied in the W3C proposed Web Components standard such as encapsulating\index{encapsulation} internal logic behind abstraction\index{abstraction} layers, modular composition, and the real-time synchronization of web application state. 
-This report discusses many of the goals and principles of the Web Components initiative and how a number of different technologies taken together help raise the overall level of abstraction\index{abstraction} for content authors, web engineers, and application developers --- which I will refer to collectively as (web) authors for short.
+The goal of this report is to demonstrate the application of 
+software engineering\index{software engineering} 
+design patterns embodied in the W3C proposed Web Components standard such as 
+encapsulating\index{encapsulation} internal logic 
+behind abstraction\index{abstraction} layers, 
+modular composition, 
+and the real-time synchronization of web application state. 
+This report discusses many of the goals and principles of the Web Components initiative and how a number of different technologies taken together help raise the overall level of 
+abstraction\index{abstraction} for content authors, web engineers, and application developers --- which I will refer to collectively as (web) authors for short.
 
-The Background section provides an introduction to some of the architectural problems inherent in modern web authoring and how Web Components (WC) address them. 
+The Background section provides an introduction to some of the architectural problems inherent in modern web authoring and how Web Components\index{Web Components} (WC) address them. 
 It also provides some background the on software engineering design patterns that are embodied in Web Components such as encapsulation and composition.
-It describes some of the motivations behind the development of Speakur and some of the specific software engineering questions it addresses, such as the ability to provide a hassle-free way to host an embedded discussion forum inside an arbitrary web resource in a way that is fully encapsulated.
+It describes some of the motivations behind the development of Speakur\index{Speakur} and some of the specific software engineering questions it addresses, such as the ability to provide a hassle-free way to host an embedded discussion forum inside an arbitrary web resource in a way that is fully encapsulated.
 
 The Approach section describes the high level software architecture\index{architecture} choices behind Speakur and details the specific structures and techniques used when constructing a Web Component.
-It describes how Speakur uses WC to implement encapsulated\index{encapsulation} modules whose internals are protected from unintentional outside influence. 
+It describes how Speakur\index{Speakur} uses WC to implement encapsulated\index{encapsulation} modules whose internals are protected from unintentional outside influence. 
 It also describes how the choice of the Firebase\index{Firebase} cloud database service and its WebSocket-based\index{WebSockets} event notification system impacts Speakur's architecture.
 
-The Implementation section shows how to apply Web Component principles to the task of creating a flexible and generic discussion forum for both desktop and mobile browsers. 
-It describes the low level architecture, code flow, and synchronization process.
-An important topic in this section is security: how can we implement a largely client-based system while maintaining some kind of data integrity?
+The Implementation section shows how to apply Web Component\index{Web Components} principles to the task of creating a flexible and generic discussion forum for both desktop and mobile browsers. 
+It describes the low level architecture\index{architecture}, code flow, and synchronization process.
+An important topic in this section is security\index{security}: how can we implement a largely client-based system while maintaining some kind of data integrity?
 
-This is followed by an Analysis section which discusses some of the outcomes as compared to the original goals and also looks at the impact of the selection of Web Components, Polymer, Firebase and some of the other architectural choices. 
+This is followed by an Analysis section which discusses some of the outcomes as compared to the original goals and also looks at the impact of the selection of Web Components\index{Web Components}, Polymer\index{Polymer}, Firebase\index{Firebase} and some of the other architectural choices. 
 A few quantitative results are included, I hope \textbf{(TODO)}.
 
 Finally, the Conclusion section is there and wraps up the report with various words \textbf{(TODO)}. 
@@ -169,7 +177,7 @@ Finally, the Conclusion section is there and wraps up the report with various wo
 \section{Source Code and Demonstration Resources}
 \index{Speakur source code@\emph{Speakur source code}}%
 
-The source code for Speakur consists of HTML\index{HTML} and Javascript\index{Javascript} files located in a Git\index{Git} version control repository. 
+The source code for Speakur consists of HTML\index{HTML} and JavaScript\index{JavaScript} files located in a Git\index{Git} version control repository. 
 These files constitute an \textit{HTML Import}\index{HTML!Imports} package that provides a
 \textbf{\tcode{<speakur-discussion>}}
 custom HTML element\index{Custom Elements} for the use of web authors in their own pages.
@@ -185,7 +193,7 @@ An example of using \tcode{<speakur-discussion>} is given in Chapter 3 and in br
  </speakur-discussion>
 \end{lstlisting}
 
-The Speakur source code and component documentation can be found on the social coding site GitHub.com\index{GitHub} at~\cite{landers2015-b}:
+The Speakur\index{Speakur} source code and component documentation can be found on the social coding site GitHub.com\index{GitHub} at~\cite{landers2015-b}:
 
 \tcode{\url{https://github.com/Preston-Landers/speakur-discussion}}
 
