--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -4,10 +4,13 @@
 
 
 \section{Layout and Structure}
+Speakur\index{Speakur} is delivered as a single Custom Element\index{Custom Element}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
+You must import the tag with \tcode{<link rel=import href=...>} tag to make it available to place on the page. 
+This element has a \tcode{<template>}\index{<template>} that 
 
 \section{Database Design}
 
-\section{Distributed Synchronization}
+\section{Synchronization}
 
 \subsection{Data Bindings}
 
