Add grouping space between chapters in the List of Source Listings.

--- a/latex/utdiss2.sty
+++ b/latex/utdiss2.sty
@@ -391,6 +391,7 @@
     % \chaptermark{#1}
     \addtocontents{lof}{\protect\addvspace{10pt}}
     \addtocontents{lot}{\protect\addvspace{10pt}}
+    \addtocontents{lol}{\protect\addvspace{10pt}}
     \@makechapterhead{#2} \@afterheading
     \ifnum\chap@or@app=1 \ifnum\value{chapter}=1         % if Chapter 1
         \markboth{}{}\pagestyle{myheadings}
